feat: Add page icon

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,8 +1,18 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Would You Rather",
+  "name": "Would You Rather?",
   "icons": [
-  ],
+    {
+        "src": "favicon/android-chrome-192x192.png",
+        "sizes": "192x192",
+        "type": "image/png"
+    },
+    {
+        "src": "favicon/android-chrome-256x256.png",
+        "sizes": "256x256",
+        "type": "image/png"
+    }
+],
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
